--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "~1.2.12-build.2226",
     "angular-route": "~1.2.12-build.2226",
     "angular-bootstrap": "~0.13.0",
+    "ng-grid": "~2.0.14",
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.4",
     "ionicons": "~2.0.0",
