--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.4",
     "ionicons": "~2.0.0",
-    "Font-Awesome": "~4.3.0"
+    "Font-Awesome": "~4.3.0",
   },
   "devDependencies": {}
 }
