--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "nodeCRM",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.2.12-build.2226",
-    "angular-route": "~1.2.12-build.2226",
-    "angular-bootstrap": "~0.12.0",
+    "angular": "~1.2.28",
+    "angular-route": "~1.2.28",
+    "angular-bootstrap": "~0.10.0",
     "ng-grid": "~2.0.14",
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.4",
